tests/ui/async-await/unconstrained-lifetimes.stderr
error[E0412]: cannot find type `Missing` in this scope
  --> $DIR/unconstrained-lifetimes.rs:6:17
   |
LL | async fn foo(_: Missing<'_>) {}
   |                 ^^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
